[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Themes/Dark/PanelHighlight.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Views/Dashboard.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Roboto16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/WelcomeMessage.gd" type="Script" id=5]
[ext_resource path="res://Assets/Resources/WelcomeMessages.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/NovaMono100.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Icons/GitHub-Mark-Light-120px-plus.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/Discord-Logo-White.svg" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/right_arrow_active.png" type="Texture" id=10]
[ext_resource path="res://Scripts/CustomTransparentButton.gd" type="Script" id=11]
[ext_resource path="res://Assets/Scripts/TextureLinkBtn.gd" type="Script" id=12]
[ext_resource path="res://Assets/Buttons/left_arrow_active.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Resource" id=3]
script = ExtResource( 6 )
messages = PoolStringArray( "A big part of staying productive is knowing when to rest and when to work, take some time off!", "I hate the \"Don\'t procrastinate\" gang. What\'s wrong with doing nothing\?", "A long time ago a wise old woman told me that being productive is all about being unpredictable. Being unpredictable in what you\'ll be doing next. It\'s the thoughts of work that get you tired before you even begin.", "See that week old, half eaten apple on your desk\? See how juicy it looks\? Don\'t eat it. Gross.", "Spreadsheetsare for amateurs.", "Game development is like coming back from hell with a snickers bar in your irght hand and broken mouse in the other.", "Ever felt like being productive\? Me neither.", "Congratulations! You\'re ready.", "Old wisdom foresees that eventually we\'ll all find happiness where we least expected it.", "Not to be a bore, but that time tracker ain\'t gonna turn itself on. Start tracking something now, even if it\'s nothing." )

[node name="Dashboard" type="Control" groups=["UI_THEME"]]
margin_right = 990.0
margin_bottom = 571.0
rect_pivot_offset = Vector2( 495, 286 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.611765 )
margin_top = 72.0
margin_right = 930.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Date"
align = 1

[node name="Time" type="Label" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 930.0
margin_bottom = 249.0
custom_colors/font_color = Color( 0.854902, 0.423529, 0.384314, 1 )
custom_fonts/font = ExtResource( 7 )
text = "00:00:00"
align = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_left = 250.0
margin_top = 259.0
margin_right = 680.0
margin_bottom = 419.0
rect_min_size = Vector2( 430, 160 )
size_flags_horizontal = 4
custom_styles/panel = ExtResource( 1 )

[node name="WelcomeMessage" type="Label" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_right = -15.0
grow_horizontal = 2
rect_min_size = Vector2( 400, 100 )
size_flags_horizontal = 4
size_flags_vertical = 1
custom_colors/font_color = Color( 0.0862745, 0.152941, 0.160784, 1 )
custom_fonts/font = ExtResource( 4 )
text = "\"A big part of staying productive is knowing when to rest and when to work, take some time off!\""
align = 1
valign = 1
autowrap = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
resource = SubResource( 3 )

[node name="Tween" type="Tween" parent="VBoxContainer/Panel/WelcomeMessage"]

[node name="Next" type="TextureButton" parent="VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.364706 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -18.0
margin_right = 52.0
margin_bottom = 19.0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Next2" type="TextureButton" parent="VBoxContainer/Panel"]
self_modulate = Color( 1, 1, 1, 0.364706 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -57.2757
margin_top = -18.5
margin_right = -19.2757
margin_bottom = 18.5
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 429.0
margin_right = 930.0
margin_bottom = 469.0
rect_min_size = Vector2( 0, 40 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discord" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.1801
margin_top = -65.4414
margin_right = -24.1801
margin_bottom = -25.4414
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
target_link = "https://discord.gg/bWxcZjn"
theme_highlight = true

[node name="Github" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.361
margin_top = -65.4414
margin_right = -81.3611
margin_bottom = -25.4414
rect_min_size = Vector2( 0, 40 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
target_link = "https://github.com/Mad-Cookies-Prototypes/mad-productivity"
theme_highlight = true

[connection signal="pressed" from="VBoxContainer/Panel/Next" to="VBoxContainer/Panel/WelcomeMessage" method="_on_Next_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/Next2" to="VBoxContainer/Panel/WelcomeMessage" method="_on_Previous_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
